--- a/requirements.txt
+++ b/requirements.txt
@@ -33,3 +33,6 @@ typing-inspect==0.9.0
 typing_extensions==4.10.0
 urllib3==2.2.1
 yarl==1.9.4
+beautifulsoup4==4.12.3
+soupsieve==2.5
+faiss-cpu==1.8.0
