--- a/requirements.txt
+++ b/requirements.txt
@@ -33,3 +33,79 @@ typing-inspect==0.9.0
 typing_extensions==4.11.0
 urllib3==2.2.1
 yarl==1.9.4
+anyio==4.3.0
+asgiref==3.8.1
+backoff==2.2.1
+bcrypt==4.1.2
+beautifulsoup4==4.12.3
+build==1.2.1
+cachetools==5.3.3
+chroma-hnswlib==0.7.3
+chromadb==0.4.24
+click==8.1.7
+coloredlogs==15.0.1
+Deprecated==1.2.14
+duckdb==0.10.1
+faiss-cpu==1.8.0
+fastapi==0.110.1
+filelock==3.13.4
+flatbuffers==24.3.25
+fsspec==2024.3.1
+google-auth==2.29.0
+googleapis-common-protos==1.63.0
+grpcio==1.62.1
+h11==0.14.0
+httptools==0.6.1
+huggingface-hub==0.22.2
+humanfriendly==10.0
+importlib-metadata==7.0.0
+importlib_resources==6.4.0
+kubernetes==29.0.0
+markdown-it-py==3.0.0
+mdurl==0.1.2
+mmh3==4.1.0
+monotonic==1.6
+mpmath==1.3.0
+oauthlib==3.2.2
+onnxruntime==1.17.3
+opentelemetry-api==1.24.0
+opentelemetry-exporter-otlp-proto-common==1.24.0
+opentelemetry-exporter-otlp-proto-grpc==1.24.0
+opentelemetry-instrumentation==0.45b0
+opentelemetry-instrumentation-asgi==0.45b0
+opentelemetry-instrumentation-fastapi==0.45b0
+opentelemetry-proto==1.24.0
+opentelemetry-sdk==1.24.0
+opentelemetry-semantic-conventions==0.45b0
+opentelemetry-util-http==0.45b0
+overrides==7.7.0
+posthog==3.5.0
+protobuf==4.25.3
+pulsar-client==3.5.0
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+Pygments==2.17.2
+PyPika==0.48.9
+pyproject_hooks==1.0.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+requests-oauthlib==2.0.0
+rich==13.7.1
+rsa==4.9
+setuptools==69.5.0
+shellingham==1.5.4
+six==1.16.0
+sniffio==1.3.1
+soupsieve==2.5
+starlette==0.37.2
+sympy==1.12
+tokenizers==0.15.2
+tqdm==4.66.2
+typer==0.12.3
+uvicorn==0.29.0
+uvloop==0.19.0
+watchfiles==0.21.0
+websocket-client==1.7.0
+websockets==12.0
+wrapt==1.16.0
+zipp==3.18.1
