--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ annotated-types==0.6.0
 attrs==23.2.0
 certifi==2024.2.2
 charset-normalizer==3.3.2
-dataclasses-json==0.6.4
+dataclasses-json
 feedparser==6.0.11
 frozenlist==1.4.1
 greenlet==3.0.3
@@ -33,7 +33,7 @@ typing-inspect==0.9.0
 typing_extensions==4.11.0
 urllib3==2.2.1
 yarl==1.9.4
-anyio==4.3.0
+anyio
 asgiref==3.8.1
 backoff==2.2.1
 bcrypt==4.1.2
@@ -102,10 +102,38 @@ sympy==1.12
 tokenizers==0.15.2
 tqdm==4.66.2
 typer==0.12.3
-uvicorn==0.29.0
+uvicorn
 uvloop==0.19.0
-watchfiles==0.21.0
+watchfiles
 websocket-client==1.7.0
 websockets==12.0
 wrapt==1.16.0
 zipp==3.18.1
+aiofiles==23.2.1
+asyncer
+bidict==0.23.1
+boto3==1.34.84
+botocore==1.34.84
+chainlit==1.0.504
+chevron==0.14.0
+fastapi-socketio==0.0.10
+filetype==1.2.0
+httpcore==1.0.5
+httpx==0.27.0
+jmespath==1.0.1
+Lazify==0.4.0
+literalai
+nest-asyncio==1.6.0
+opentelemetry-exporter-otlp==1.24.0
+opentelemetry-exporter-otlp-proto-http==1.24.0
+PyJWT==2.8.0
+python-engineio==4.9.0
+python-graphql-client==0.4.3
+python-multipart==0.0.9
+python-socketio==5.11.2
+s3transfer==0.10.1
+simple-websocket==1.0.0
+syncer==2.0.3
+tomli==2.0.1
+uptrace==1.24.0
+wsproto==1.2.0
